--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
       </div>
     </header>
     <main>
-      <img class="triangle" src="/images/bg-triangle.svg" alt="" />
-      <div class="opt-div">
-        <div class="option paper">
-          <img src="/images/icon-paper.svg" alt="" />
+      <section class="start">
+        <img class="triangle" src="/images/bg-triangle.svg" alt="" />
+        <div class="opt-div">
+          <div class="option paper">
+            <img src="/images/icon-paper.svg" alt="" />
+          </div>
+          <div class="option scissors">
+            <img src="/images/icon-scissors.svg" alt="" />
+          </div>
+          <div class="option rock">
+            <img src="/images/icon-rock.svg" alt="" />
+          </div>
         </div>
-        <div class="option scissors">
-          <img src="/images/icon-scissors.svg" alt="" />
-        </div>
-        <div class="option rock">
-          <img src="/images/icon-rock.svg" alt="" />
-        </div>
-      </div>
+      </section>
     </main>
     <button type="button">rules</button>
     <!-- <div class="rules">rules</div> -->
