--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </header>
     <main>
-      <section class="start hidden">
+      <section class="start">
         <img class="triangle" src="/images/bg-triangle.svg" alt="" />
         <div class="opt-div">
           <div class="option paper">
@@ -46,7 +46,7 @@
           </div>
         </div>
       </section>
-      <section class="game">
+      <section class="game hidden">
         <!-- <div class="players">
         </div> -->
         <div class="game-options">
@@ -62,8 +62,8 @@
           </div>
           <div class="players">
             <h3 class="computer">the house picked</h3>
-            <div class="opt rock">
-              <img src="/images/icon-rock.svg" alt="" />
+            <div class="comp-opt">
+              <img src="" alt="" />
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
       <div class="rules-div">
         <div class="rules-div-header">
           <h1>rules</h1>
-          <img src="/images/icon-close.svg" alt="close button" />
+          <img class="close" src="/images/icon-close.svg" alt="close button" />
         </div>
         <img src="/images/image-rules.svg" alt="rules" />
       </div>
