--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <section class="start">
         <img class="triangle" src="/images/bg-triangle.svg" alt="" />
         <div class="opt-div">
-          <div class="option paper">
+          <div data-name="paper" class="option paper">
             <img src="/images/icon-paper.svg" alt="" />
           </div>
-          <div class="option scissors">
+          <div data-name="scissors" class="option scissors">
             <img src="/images/icon-scissors.svg" alt="" />
           </div>
-          <div class="option rock">
+          <div data-name="rock" class="option rock">
             <img src="/images/icon-rock.svg" alt="" />
           </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="game-options">
           <div class="players">
             <h3 class="player">you picked</h3>
-            <div class="player-opt opt scissors">
+            <div class="player-opt opt">
               <img src="/images/icon-scissors.svg" alt="" />
             </div>
           </div>
@@ -62,7 +62,7 @@
           </div>
           <div class="players">
             <h3 class="computer">the house picked</h3>
-            <div class="comp-opt">
+            <div class="comp-opt computer-opt">
               <img src="" alt="" />
             </div>
           </div>
