--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img class="logo" src="/images/logo.svg" alt="" />
       <div class="score-card">
         <p>score</p>
-        <span>13</span>
+        <span>0</span>
       </div>
     </header>
     <main>
@@ -52,7 +52,7 @@
         <div class="game-options">
           <div class="players">
             <h3 class="player">you picked</h3>
-            <div class="player-opt opt">
+            <div class="player-opt opt scissors">
               <img src="/images/icon-scissors.svg" alt="" />
             </div>
           </div>
