--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
     <header>
-      <img class="logo" src="/images/logo.svg" alt="" />
+      <img class="logo" src="/images/logo.svg" alt="logo image" />
       <div class="score-card">
         <p>score</p>
         <span>0</span>
@@ -33,27 +33,25 @@
     </header>
     <main>
       <section class="start">
-        <img class="triangle" src="/images/bg-triangle.svg" alt="" />
+        <img class="triangle" src="/images/bg-triangle.svg" alt="triangle" />
         <div class="opt-div">
           <div data-name="paper" class="option paper">
-            <img src="/images/icon-paper.svg" alt="" />
+            <img src="/images/icon-paper.svg" alt="paper-image" />
           </div>
           <div data-name="scissors" class="option scissors">
-            <img src="/images/icon-scissors.svg" alt="" />
+            <img src="/images/icon-scissors.svg" alt="scissors-image" />
           </div>
           <div data-name="rock" class="option rock">
-            <img src="/images/icon-rock.svg" alt="" />
+            <img src="/images/icon-rock.svg" alt="rock-image " />
           </div>
         </div>
       </section>
       <section class="game hidden">
-        <!-- <div class="players">
-        </div> -->
         <div class="game-options">
           <div class="players">
             <h3 class="player">you picked</h3>
             <div class="player-opt opt scissors">
-              <img src="/images/icon-scissors.svg" alt="" />
+              <img src="/images/icon-scissors.svg" alt="player-hand" />
             </div>
           </div>
           <div class="info">
@@ -63,7 +61,7 @@
           <div class="players">
             <h3 class="computer">the house picked</h3>
             <div class="comp-opt computer-opt">
-              <img src="" alt="" />
+              <img src="" alt="computer-hand" />
             </div>
           </div>
         </div>
