--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="players">
             <h3 class="computer">the house picked</h3>
             <div class="comp-opt computer-opt">
-              <img src="" alt="computer-hand" />
+              <img src="" alt="" />
             </div>
           </div>
         </div>
